[gd_scene load_steps=6 format=2]

[ext_resource path="res://common/world/obstacles/point_area.tscn" type="PackedScene" id=1]
[ext_resource path="res://common/world/obstacles/obstacle.gd" type="Script" id=2]
[ext_resource path="res://common/world/obstacles/bot_detector.gd" type="Script" id=3]
[ext_resource path="res://common/world/obstacles/checkpoint.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 400, 1280 )

[node name="Obstacle" type="Node2D"]
script = ExtResource( 2 )

[node name="PointArea" parent="." instance=ExtResource( 1 )]
unique_name_in_owner = true

[node name="Checkpoint" parent="." instance=ExtResource( 4 )]
unique_name_in_owner = true

[node name="NavPolygon" type="NavigationPolygonInstance" parent="."]
unique_name_in_owner = true

[node name="SpacingNavPoly" type="NavigationPolygonInstance" parent="."]
unique_name_in_owner = true

[node name="BotDetector" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BotDetector"]
position = Vector2( -400, 0 )
shape = SubResource( 1 )

[connection signal="body_entered" from="BotDetector" to="BotDetector" method="_on_BotDetector_body_entered"]
